--- a/src/Com/Resume/index.scss
+++ b/src/Com/Resume/index.scss
@@ -4,9 +4,21 @@
   font-size: 16px;
 }
 .header {
+  overflow: hidden;
+  position: relative;
+  background: #63a4d3;
+  .banner {
+    position: absolute;
+    right: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    opacity: 0.08;
+  }
   .title {
+    position: relative;
     padding: 50px 40px 60px;
-    background: #63a4d3;
     font-size: 25px;
     color: #fff;
     text-align: right;
@@ -34,6 +46,7 @@
   @include flex(flex-start, flex-start);
   margin-top: -60px;
   padding: 0 40px 20px;
+  position: relative;
   .avatar {
     width: 100px;
     height: 140px;
@@ -44,6 +57,7 @@
 
   .base_info {
     margin: 0 0 0 30px;
+    flex: 1;
     .name {
       color: #fff;
       font-size: 28px;
@@ -61,6 +75,10 @@
           text-indent: 10px;
         }
       }
+    }
+    .hobby {
+      margin-top: 20px;
+      justify-content: flex-end;
     }
   }
 }
@@ -103,7 +121,7 @@
   }
 }
 .projects {
-  padding: 0 20px 70px;
+  padding: 0 20px;
   .item {
     padding: 10px 0;
     .name {
