--- a/src/Com/Resume/index.scss
+++ b/src/Com/Resume/index.scss
@@ -1,12 +1,15 @@
 @import "../../public.scss";
+
 .resume {
   padding: 0 0 20px;
   font-size: 16px;
 }
+
 .header {
   overflow: hidden;
   position: relative;
   background: #63a4d3;
+
   .banner {
     position: absolute;
     right: 0;
@@ -16,16 +19,19 @@
     object-fit: cover;
     opacity: 0.08;
   }
+
   .title {
     position: relative;
     padding: 50px 40px 60px;
     font-size: 25px;
     color: #fff;
     text-align: right;
+
     .cn {
       font-family: Microsoft YaHei;
       @include flex(flex-end);
       line-height: 40px;
+
       .split {
         width: 1px;
         content: "";
@@ -34,6 +40,7 @@
         margin: 5px 12px;
       }
     }
+
     .en {
       font-size: 10px;
       color: rgba(255, 255, 255, 0.575);
@@ -42,11 +49,13 @@
     }
   }
 }
+
 .info {
   @include flex(flex-start, flex-start);
   margin-top: -60px;
   padding: 0 40px 20px;
   position: relative;
+
   .avatar {
     width: 100px;
     height: 140px;
@@ -58,43 +67,59 @@
   .base_info {
     margin: 0 0 0 30px;
     flex: 1;
+
     .name {
       color: #fff;
       font-size: 28px;
       margin: 10px 0 30px;
     }
+
     .base_info_items {
       @include flex(flex-start);
       flex-wrap: wrap;
       font-size: 12px;
       margin: 0 -10px;
+
       .base_info_item {
         @include flex();
         margin: 0 10px;
+
         .content {
           text-indent: 10px;
         }
       }
     }
-    .hobby {
+
+    .hobbys {
       margin-top: 20px;
-      justify-content: flex-end;
+      @include flex(flex-end);
+      .hobbys_label {
+        @include flex;
+      }
+      .hobby {
+        margin: 0 8px;
+      }
     }
   }
 }
+
 .detail {
   padding: 20px 20px 0;
 }
+
 .edu {
   padding: 0 20px 20px;
+
   .item {
     @include flex(flex-start);
     padding: 10px 0;
 
     font-size: 16px;
+
     .school {
       margin: 0 30px 0 0;
     }
+
     .qualification {
       flex: 1;
       font-size: 16px;
@@ -102,42 +127,53 @@
     }
   }
 }
+
 .companys {
   padding: 0 20px 30px;
+
   .item {
     padding: 10px 0;
+
     .top {
       @include flex(space-between);
       line-height: 30px;
     }
+
     .position {
       font-size: 15px;
       padding: 5px 0;
     }
+
     .job {
       font-size: 14px;
       color: #747474;
     }
   }
 }
+
 .projects {
   padding: 0 20px;
+
   .item {
     padding: 10px 0;
+
     .name {
       padding: 0 0 5px;
       font-size: 17px;
     }
+
     .job {
       font-size: 15px;
       color: #444444;
       padding: 5px 0;
     }
+
     .technology {
       @include flex(flex-start);
       flex-wrap: wrap;
       padding: 5px 0;
       margin: 0 -5px;
+
       .item {
         font-size: 12px;
         margin: 2px 5px;
@@ -151,13 +187,16 @@
     .description {
       font-size: 14px;
       color: #747474;
+
       .content {
         text-indent: 25px;
       }
     }
+
     .contribution {
       font-size: 15px;
       color: #222;
+
       .content {
         padding: 0 0 0 25px;
       }
@@ -171,9 +210,11 @@
     }
   }
 }
+
 .self_appraisal {
   padding: 10px 20px 20px;
   color: #5a5a5a;
+
   .item {
     padding: 3px 0;
   }
