--- a/src/Com/Resume/index.scss
+++ b/src/Com/Resume/index.scss
@@ -108,7 +108,7 @@
 }
 
 .edu {
-  padding: 0 20px 20px;
+  padding: 0 20px;
 
   .item {
     @include flex(flex-start);
@@ -124,6 +124,28 @@
       flex: 1;
       font-size: 16px;
       color: #424242;
+    }
+  }
+}
+
+.advantage,
+.technology {
+  padding: 20px 30px 0;
+  color: #222;
+  font-size: 15px;
+  .content {
+    position: relative;
+    // @include flex(flex-start, center);
+    &::after {
+      position: absolute;
+      background: #3a617c;
+      border-radius: 50%;
+      width: 5px;
+      height: 5px;
+      content: "";
+      position: absolute;
+      left: -10px;
+      top: 8px;
     }
   }
 }
